--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>1.7.5</version>
         </dependency>
 
-        
+        <dependency>
+            <groupId>de.l3s.boilerpipe</groupId>
+            <artifactId>boilerpipe</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+
     </dependencies>
 </project>
