--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
             <version>6.1.0.jre8</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.nekohtml/nekohtml -->
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.22</version>
+        </dependency>
+
 
     </dependencies>
 </project>
