--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,19 @@
             <version>1.8.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.beykery/neuroph -->
+        <dependency>
+            <groupId>org.beykery</groupId>
+            <artifactId>neuroph</artifactId>
+            <version>2.92</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.yahoofinance-api/YahooFinanceAPI -->
+        <dependency>
+            <groupId>com.yahoofinance-api</groupId>
+            <artifactId>YahooFinanceAPI</artifactId>
+            <version>3.5.0</version>
+        </dependency>
 
     </dependencies>
 </project>
